Revision history for SQL::Abstract

    - Remove excess parentheses in debug SQL
    - Fix parsing of foo.* in SQLA::Tree
    - Fix bindtype fail when using -between with arrayrefref literals
    - Add handling for NULL for -in
    - The -nest operator has entered semi-deprecated status and has been
      undocumented. Please do not use it in new code

revision 1.71  2010-11-09
----------------------------
    - Add EXECUTING for clarity of long running SQL
    - Add "squash_repeats" option to fix it such that repeated SQL gets ellided
      except for placeholders
    - Highlight transaction keywords
    - Highlight HAVING
    - Leave quotes from DBIC in bindargs
    - Add error checking on "profile" for SQLA::Tree
    - Hide bulk inserts from DBIx::Class
    - Fix missing doc (RT#62587)
    - Format functions in MySQL-friendly manner foo( ... ) vs foo ( ... )

revision 1.69  2010-10-22
----------------------------
    - Add quotes for populated placeholders and make the background
      magenta instead of cyan
    - Color and indent pagination keywords
    - Fix a silly bug which broke placeholder fill-in in DBIC
    - Installs format-sql to format SQL passed in over STDIN
    - Switch the tokenizer to precompiled regexes (massive speedup)
    - Rudimentary handling of quotes ( 'WHERE' vs WHERE )
    - Fix extended argument parsing by IN/BETWEEN
    - Add proper handling of lists (foo,bar,?)
    - Better handling of generic -function's during AST construction
    - Special handle IS NOT? NULL
    - Make sure unparse() does not destroy a passed in \@bindargs
    - Support ops with _'s in them (valid in Oracle)
    - Properly parse both types of default value inserts
    - Allow { -func => $val } as arguments to UPDATE

revision 1.68  2010-09-16
----------------------------
    - Document methods on Tree
    - Add affordances for color coding placeholders
    - Change ::Tree::whitespace to whitespace_keyword

revision 1.67_03  2010-09-11